public class FileIO implements IO{

    @Override
    public String readTurnamentData() {
        return null;
    }

    @Override
    public String saveTurnemantData() {
        return null;
    }

    @Override
    public String readTeamData() {
        return null;
    }

    @Override
    public String saveTeamData() {
        return null;
    }
}
