public class Main {

    public static void main(String[] args) {
	Turnament turnament = new Turnament();
    turnament.startTurnmanet();
    }
}
