public class Match {

    public Match(Teams team1, Teams team2){

    }



}
