public class Teams {
    int goalScore;
    int points;
    String teamName;
    String playerName;

    public void createTeams(){

    }

    public void setGoalScore(int goalScore){
        this.goalScore = goalScore;
    }

    public int getGoalScore(){
        return goalScore;
    }

    public void setPoints(int points){
        this.points = points;
    }

    public int getPoints(){
        return points;
    }

    public void newResults(){

    }

    public void seeSchedule(){

    }


}
