import java.util.ArrayList;

public class TextUI {
    ArrayList<String> getTeamInfo = new ArrayList<>();



    public void mainMenu(){

    }


}
