public class Turnament{
    String time;
    String date;
    TextUI ui;
    IO io;
    Match match1;
    Match match2;
    Match match3;
    Match match4;
    Match match5;
    Match match6;
    Match match7;




    public void createNewTurnament(){

    }

    public void startTurnmanet(){

    }

    public void createRound(){

    }

}
