@startuml
'https://plantuml.com/sequence-diagram

class Main
class TextUI
class Turnament
class Teams
Interface IO
class Match
class FileIO

Main *-- Turnament

Turnament *-- TextUI
Turnament *-- IO
Turnament *-- Teams
Turnament *-- Match

IO *-- FileIO

Main : Turnament turnament = new Turnament();
Main : turnament.startTurnament();

Match : teamId(ArrayList<teams>);

IO : readTurnamentData();
IO : saveTurnemantData();
IO : readTeamData();
IO : saveTeamData();

Teams : int goalScore;
Teams : int points;
Teams : String teamName;
Teams : String playerName;
Teams : createTeams();
Teams : setGoalScore();
Teams : getGoalScore();
Teams : setPoints();
Teams : getPoints():
Teams : boolean winner;

Turnament : String time;
Turnament : String date;
Turnament : createRound();
Turnament : TextUI ui;
Turnament : FileIO fileIO;

Turnament : createNewTurnament();
Turnament : currentTurnament();
Turnament : startTurnmanet();
Turnament : match();

TextUI : newResults();
TextUI : seeSchedule();
TextUI : mainMenu();
TextUI : Arraylist<String> getTeamInfo

@enduml